// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Criterion Feedback snapshot feedback is configured to disabled 1`] = `null`;

exports[`Criterion Feedback snapshot feedback is configured to optional 1`] = `
<Form.Group>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    disabled={false}
    floatingLabel="Add comments (Optional)"
    onChange={[MockFunction this.onChange]}
    value="criterion value"
  />
</Form.Group>
`;

exports[`Criterion Feedback snapshot feedback is configured to required 1`] = `
<Form.Group>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    disabled={false}
    floatingLabel="Add comments"
    onChange={[MockFunction this.onChange]}
    value="criterion value"
  />
</Form.Group>
`;

exports[`Criterion Feedback snapshot feedback value is invalid 1`] = `
<Form.Group>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    disabled={false}
    floatingLabel="Add comments"
    onChange={[MockFunction this.onChange]}
    value="criterion value"
  />
  <Form.Control.Feedback
    className="feedback-error-msg"
    type="invalid"
  >
    The feedback is required
  </Form.Control.Feedback>
</Form.Group>
`;

exports[`Criterion Feedback snapshot is graded 1`] = `
<Form.Group>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    disabled={true}
    floatingLabel="Comments"
    onChange={[MockFunction this.onChange]}
    value="criterion value"
  />
</Form.Group>
`;

exports[`Criterion Feedback snapshot is grading 1`] = `
<Form.Group>
  <Form.Control
    as="textarea"
    className="criterion-feedback feedback-input"
    disabled={false}
    floatingLabel="Add comments"
    onChange={[MockFunction this.onChange]}
    value="criterion value"
  />
</Form.Group>
`;
